# catalog-plugin

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.txt  MANIFEST.in  Makefile  README.md  manage.py  pyproject.toml  setup.py  test_settings.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
catalog_plugin/: __init__.py  admin.py  apps.py  models.py  urls.py
catalog_plugin/api/: catalog_api_client.py  urls.py
catalog_plugin/api/v0/: __init__.py  filters.py  serializers.py  urls.py  views.py
catalog_plugin/edxapp_wrapper/: course_module.py
catalog_plugin/edxapp_wrapper/backends/: course_module_o_v1.py
catalog_plugin/migrations/: 0001_initial.py  0002_alter_catalogcourses_options.py  0002_unique_available_course.py  __init__.py
catalog_plugin/settings/: __init__.py  common.py  test.py
catalog_plugin/tests/: __init__.py  backends_for_tests.py  test_apps.py
requirements/: base.in  base.txt  constraints.txt  dev.in  dev.txt  pip-tools.in  pip-tools.txt  quality.in  quality.txt  test.in  test.txt
